added links to nav bar

--- a/allow.html
+++ b/allow.html
@@ -11,6 +11,14 @@
 <body>
     
     <div class="background-container">
+        <nav>
+            <a href="index.html" onclick="loadPage('index.html')" >About Us</a>
+            <a href="dashboard.html" onclick="loadPage('dashboard.html')">Dashboard</a>
+            <a href="allow.html" onclick="loadPage('allow.html')" >Allowed</a>
+            <a href="block.html" onclick="loadPage('block.html')" >Blocked</a>
+            
+            <div class="animation start-home"></div>
+        </nav>
     </div>
 </body>
 </html>
