added styling and input form

--- a/block.html
+++ b/block.html
@@ -5,6 +5,7 @@
   <title>NeverGonnaLetYouBrowse</title>
   <link rel="stylesheet" href="block.css">
   <link rel="stylesheet" href="navbar.css">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
   <link rel="favicon" type="image/jpg" href="rick-logo.jpg">
 </head>
 
@@ -12,10 +13,10 @@
     
     <div class="background-container">
         <nav>
-            <a href="index.html" onclick="loadPage('index.html')" >About Us</a>
-            <a href="dashboard.html" onclick="loadPage('dashboard.html')">Dashboard</a>
-            <a href="allow.html" onclick="loadPage('allow.html')" >Allowed</a>
-            <a href="block.html" onclick="loadPage('block.html')" >Blocked</a>
+            <a href="index.html" onclick="loadPage('index.html')" class="pixel-text" >About Us</a>
+            <a href="dashboard.html" onclick="loadPage('dashboard.html')" class="pixel-text">Dashboard</a>
+            <a href="allow.html" onclick="loadPage('allow.html')" class="pixel-text">Allowed</a>
+            <a href="block.html" onclick="loadPage('block.html')" class="pixel-text">Blocked</a>
             
             <div class="animation start-home"></div>
         </nav>
