--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="navbar.css">
   <link rel="favicon" type="image/jpg" href="rick-logo.jpg">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,16 +15,16 @@
         <div class="profile">
             <img src="rick-logo.jpg" alt="profile pic" class="profile-circle"> 
         </div>
-    <h1>Unleash the Fun of Rickrolling Today!</h1>
-    <p> Easily toggle your rickrolling experience with <br>
+    <h1 class="pixel-text">Unleash the Fun of Rickrolling Today!</h1>
+    <p class="pixel-text"> Easily toggle your rickrolling experience with <br>
         our fun and interactive extension. <br>
         Stay in control with a playful status indicator <br>
         that keeps you informed!</p>
         <nav>
-            <a href="index.html" onclick="loadPage('index.html')" >About Us</a>
-            <a href="dashboard.html" onclick="loadPage('dashboard.html')">Dashboard</a>
-            <a href="allow.html" onclick="loadPage('allow.html')" >Allowed</a>
-            <a href="block.html" onclick="loadPage('block.html')" >Blocked</a>
+            <a href="index.html" onclick="loadPage('index.html')" class="pixel-text" >About Us</a>
+            <a href="dashboard.html" onclick="loadPage('dashboard.html')" class="pixel-text">Dashboard</a>
+            <a href="allow.html" onclick="loadPage('allow.html')" class="pixel-text">Allowed</a>
+            <a href="block.html" onclick="loadPage('block.html')" class="pixel-text">Blocked</a>
             
             <div class="animation start-home"></div>
         </nav>
