fixed remove button

--- a/Never-Gonna-Let-You-Browse-Extension/frontend/block.html
+++ b/Never-Gonna-Let-You-Browse-Extension/frontend/block.html
@@ -19,7 +19,7 @@
             
             <div class="animation start-home"></div>
         </nav>
-        <h2 class="pixel-text">Previous URLs</h2>
+        <h2 class="pixel-text">Blocked URLs</h2>
         <div id="urlContainer" class="url-list"></div>
     
         <h3>Enter a URL</h2>
