--- a/Never-Gonna-Let-You-Browse-Extension/frontend/popup.html
+++ b/Never-Gonna-Let-You-Browse-Extension/frontend/popup.html
@@ -13,9 +13,9 @@
             <img src="rick-logo.jpg" alt="profile pic" class="profile-circle"> 
         </div>
         <nav>
-            <a href="index.html" onclick="loadPage('index.html')" class="pixel-text" >About Us</a>
-            <a href="dashboard.html" onclick="loadPage('dashboard.html')" class="pixel-text">Dashboard</a>
-            <a href="block.html" onclick="loadPage('block.html')" class="pixel-text">Blocked</a>
+            <a href="index.html" class="pixel-text" >About Us</a>
+            <a href="dashboard.html"class="pixel-text">Dashboard</a>
+            <a href="block.html" class="pixel-text">Blocked</a>
             <div class="animation start-home"></div>
         </nav>
         <h2 class="pixel-text"> You're safe <br>... For now </h2>
