--- a/Never-Gonna-Let-You-Browse-Extension/frontend/block.html
+++ b/Never-Gonna-Let-You-Browse-Extension/frontend/block.html
@@ -5,6 +5,7 @@
   <title>NeverGonnaLetYouBrowse</title>
   <link rel="stylesheet" href="block.css">
   <link rel="stylesheet" href="navbar.css">
+  <script src="block.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="favicon" type="image/jpg" href="rick-logo.jpg">
 </head>
@@ -30,37 +31,3 @@
 </body>
 </html>
 
-<script>
-    function loadURLs() {
-    const urlContainer = document.getElementById("urlContainer");
-    const urls = JSON.parse(localStorage.getItem("urls")) || [];
-    urlContainer.innerHTML = urls.map((url, index) => `
-        <p>
-            <a href="${url}" target="_blank">${url}</a>
-            <button onclick="removeURL(${index})">Remove</button>
-        </p>
-    `).join("");
-}
-
-function addURL() {
-    const input = document.getElementById("urlInput");
-    const url = input.value.trim();
-    if (url) {
-        let urls = JSON.parse(localStorage.getItem("urls")) || [];
-        urls.unshift(url); // Add new URL to the beginning of the array
-        localStorage.setItem("urls", JSON.stringify(urls));
-        input.value = ""; // Clear the input field
-        loadURLs(); // Reload the URLs
-    }
-}
-
-function removeURL(index) {
-    let urls = JSON.parse(localStorage.getItem("urls")) || [];
-    urls.splice(index, 1); // Remove the URL at the given index
-    localStorage.setItem("urls", JSON.stringify(urls)); // Update localStorage
-    loadURLs(); // Reload the URLs after removal
-}
-
-document.addEventListener("DOMContentLoaded", loadURLs);
-
-</script> 
