trying to implement dashboard buttons

--- a/Never-Gonna-Let-You-Browse-Extension/frontend/dashboard.html
+++ b/Never-Gonna-Let-You-Browse-Extension/frontend/dashboard.html
@@ -19,17 +19,18 @@
             
             <div class="animation start-home"></div>
         </nav>
-        <h2 class="pixel-text"> You're safe <br>... For now </h2>
-        <h3 class="pixel-text">Random Madness</h3>
+        <h2 class="pixel-text" id="rickrolltext"></h2>
+        <h3 class="pixel-text" id="randomtext"></h3>
         <video class="video" autoplay loop muted>
             <source src="rickvid1.mp4" type="video/mp4">
         </video>
         <video class="video2" autoplay loop muted>
             <source src="rickvid2.mp4" type="video/mp4">
         </video>
-        <img src="Activate.png" alt="Activate" class="activate">
-        <img src="Activate.png" alt="Activate" class="activate2">
+        <img src="Activate.png" alt="Activate" class="activate" id="rickrollbtn">
+        <img src="Activate.png" alt="Activate" class="activate2" id="randombtn">
         
     </div>
+    <script src="dashboard.js"></script>
 </body>
 </html>
