add toggle random and define chaos

--- a/Never-Gonna-Let-You-Browse-Extension/frontend/dashboard.html
+++ b/Never-Gonna-Let-You-Browse-Extension/frontend/dashboard.html
@@ -27,8 +27,8 @@
         <video class="video2" autoplay loop muted>
             <source src="rickvid2.mp4" type="video/mp4">
         </video>
-        <img src="Activate.png" alt="Activate" class="activate" id="rickrollbtn">
-        <img src="Activate.png" alt="Activate" class="activate2" id="randombtn">
+        <img src="activate.png" alt="Activate" class="activate" id="rickrollbtn">
+        <img src="activate.png" alt="Activate" class="activate2" id="randombtn">
         
     </div>
     <script src="dashboard.js"></script>
