moved function to block js

--- a/Never-Gonna-Let-You-Browse-Extension/frontend/block.html
+++ b/Never-Gonna-Let-You-Browse-Extension/frontend/block.html
@@ -5,7 +5,6 @@
   <title>NeverGonnaLetYouBrowse</title>
   <link rel="stylesheet" href="block.css">
   <link rel="stylesheet" href="navbar.css">
-  <script src="block.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="favicon" type="image/jpg" href="rick-logo.jpg">
 </head>
@@ -25,9 +24,10 @@
     
         <h3>Enter a URL</h2>
         <input type="text" id="urlInput" placeholder="Enter URL here">
-        <button onclick="addURL()">Submit</button>
+        <button id="submitbtn">Submit</button>
     
     </div>
+    <script src="block.js"></script>
 </body>
 </html>
 
